trying to fix the spacing in rows

--- a/css/main.css
+++ b/css/main.css
@@ -19,17 +19,13 @@ main {
     width: 100%;
 }
 
-td {
-    text-align: center;
-}
-
 .about { 
     background: red;
 }
 
 /* stuff for brothers section */
 .brothers {
-background: black;
+    background: black;
 }
 /* .bropic {
     max-height: 100%;
